@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

abstract class Command
class Inventory
class Item
class NewCommand
class Parser
class Ui
class FileManager

Command <|. NewCommand
Item <... NewCommand
Ui <.. NewCommand
Inventory <.. NewCommand
NewCommand <... Parser
FileManager <.. NewCommand
Inventory <.. FileManager

interface Command {
    +execute():void
    +isExit():boolean
}

class NewCommand {
    -name:String
    -quantity:int
    -price:double
    +NewCommand(name:String, quantity:int, price:double)
    +execute():void
    +isExit():boolean
}

class Item {
    +Item(name:String, quantity:int, price:double, expiryDate: LocalDate)
}

class Inventory {
    {static}+put(name:String, item:Item):void
}

class Ui {
    {static}+newCommandSuccess(item:Item):void
}

class Parser {
    {static}-parseNewCommand(input:String):NewCommand
}

class FileManager {
    {static}+saveData():void
}

@enduml

@startuml
hide footbox
participant "SuperTracker" as SuperTracker <<class>> #f5e3a9
participant ":NewCommand" as NewCommand #cbf7f4
participant "FileManager" as FileManager <<class>> #bcf7cf
participant "Inventory" as Inventory <<class>> #d5eac2
participant "Ui" as Ui <<class>> #e5c2ea
participant ":Item" as Item #fbffb2
SuperTracker -> NewCommand : execute()
activate NewCommand #cbf7f4

NewCommand -> Item ** : new Item(name:String, quantity:int, price:double, expiryDate:LocalDate)
activate Item #fbffb2
Item --> NewCommand : :Item
deactivate Item

NewCommand -> Inventory : put(name:String, item:Item)
activate Inventory #d5eac2
Inventory --> NewCommand
deactivate Inventory

NewCommand -> Ui : newCommandSuccess(item:Item)
activate Ui #e5c2ea
Ui --> NewCommand
deactivate Ui

NewCommand -> FileManager : saveData()
activate FileManager #bcf7cf
FileManager -> Inventory : getItems()
FileManager --> NewCommand
deactivate FileManager

NewCommand --> SuperTracker
deactivate NewCommand
@enduml